test/memory/bradc/memmax.good
memmax.chpl:1: error: Exceeded memory limit
