test/memory/bradc/memmax.chpl
var A: [1..256] real(64);
